# speech-to-text-mcp-server

./: .gitignore  EXAMPLES.md  GPU_USAGE_GUIDE.md  INSTALL_GUIDE.md  MCP_CLIENT_SETUP.md  QUICK_START.md  README.md  USAGE_GUIDE.md  mcp_config_example.json  pyproject.toml  requirements.txt  server.py  setup.ps1  standalone_transcribe.py  start.ps1  start_mcp_server.bat
